--- a/vuejs/day3_Workshop/Lab_Tree/Lab_Tree_20.HTML
+++ b/vuejs/day3_Workshop/Lab_Tree/Lab_Tree_20.HTML
@@ -25,7 +25,7 @@
     <script>
         Vue.component('tree-item', {
             template: '#item-template',
-            props: ['item']
+            props: ['item'] //元件的屬性定義
         });
 
         var labApp = new Vue({
